[package]
name = "payments-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
rust_decimal = "1.35.0"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
